# seahorse-nautilus

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt  seahorse-nautilus.doap
data/: meson.build  org.gnome.seahorse.nautilus.gschema.xml
meson/: gpg_check_version.py
nautilus-ext/: Makefile.am  meson.build  seahorse-nautilus-module.c  seahorse-nautilus.c  seahorse-nautilus.h
po/: LINGUAS  Makevars  POTFILES.in  ar.po  as.po  ast.po  az.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  (+40 more)
tool/: Makefile.am  meson.build  seahorse-algo.c  seahorse-algo.h  seahorse-gconf.c  seahorse-gconf.h  seahorse-gpgmex-op.c  seahorse-gpgmex-util.c  seahorse-gpgmex.h  seahorse-libdialogs.h  seahorse-multi-encrypt.glade  seahorse-nautilus.gresource.xml  seahorse-notification.c  seahorse-operation.c  seahorse-operation.h  seahorse-passphrase.c  seahorse-passphrase.h  seahorse-pgp-encrypted.desktop.in.in  seahorse-pgp-keys.desktop.in.in  seahorse-pgp-operation.c  seahorse-pgp-operation.h  seahorse-pgp-signature.desktop.in.in  seahorse-progress.c  seahorse-progress.h  seahorse-progress.xml  seahorse-secure-entry.c  seahorse-secure-entry.h  seahorse-secure-memory.c  seahorse-secure-memory.h  seahorse-tool-files.c  seahorse-tool-progress.c  seahorse-tool.1  seahorse-tool.c  seahorse-tool.h  seahorse-util.c  seahorse-util.h  seahorse-vfs-data.c  seahorse-vfs-data.h  seahorse-widget.c  seahorse-widget.h
